--- a/auth-service.yml
+++ b/auth-service.yml
@@ -26,12 +26,11 @@ security:
 spring:
     datasource:
         driver-class-name: org.postgresql.Driver
-        platform: postgres
-        url: jdbc:postgresql://localhost:5432/hbcloud
         username: hbcloud
         password: 'hbcloud00'
+        url: jdbc:postgresql://localhost:5432/hbcloud
     jpa:
-        database-platform: org.hibernate.dialect.PostgreSQLDialect
+        database-platform: org.hibernate.dialect.PostgreSQL9Dialect
         generate-ddl: false
         hibernate:
             ddl-auto: none
