--- a/auth-service.yml
+++ b/auth-service.yml
@@ -28,7 +28,7 @@ spring:
         driver-class-name: org.postgresql.Driver
         url: jdbc:postgresql://localhost:5432/hbcloud
         username: hbcloud
-        password: 'hbcloud00'
+        password: hbcloud00
     jpa:
         database-platform: org.hibernate.dialect.PostgreSQL9Dialect
         generate-ddl: false
