--- a/auth-service.yml
+++ b/auth-service.yml
@@ -19,7 +19,7 @@ security:
             access-token-validity-seconds: 1800
             authorized-grant-types: password,refresh_token
             client-id: hbcloud
-            client-secret: $2a$10$p9Pk0fQNAQSesI4vuvKA0OZanDD2
+            client-secret: $2b$10$lS.XnuOfZQzKl3bU2pbhp.jwhrhtLhT814BhtsTNSDNyMpsdT.zAi
             resource-ids: resources
             scope: read,write
 
