--- a/auth-service.yml
+++ b/auth-service.yml
@@ -16,12 +16,13 @@ eureka:
 security:
     oauth2:
         client:
-            access-token-validity-seconds: 1800
-            authorized-grant-types: password,refresh_token
+            access-token-validity-seconds: 3600
+            authorized-grant-types: password,refresh_token,authorization_code
             client-id: hbcloud
             client-secret: $2b$10$lS.XnuOfZQzKl3bU2pbhp.jwhrhtLhT814BhtsTNSDNyMpsdT.zAi
             resource-ids: resources
             scope: read,write
+            redirect-uris: http://localhost:3000/auth
 
 spring:
     datasource:
